Creating MainMenu and Add Guns MuzzleFlash ParticleFX

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,11 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 LocalMapOptions=
-TransitionMap=
+TransitionMap=/Game/FirstPersonBP/Maps/TravelMap.TravelMap
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/BRGameInstance.BRGameInstance_C
 GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
