--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/BRGameInstance.BRGameInstance_C
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/FirstPersonBP/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -88,6 +88,24 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.Engine]
+!NetDriverDefinitions=ClearArray
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
+ 
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+PollingIntervalInMs=20
+ 
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+GameServerQueryPort=27015
+bRelaunchInSteam=false
+GameVersion=1.0.0.0
+bVACEnabled=1
+bAllowP2PPacketRelay=true
+P2PConnectionTimeout=90
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -132,21 +150,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/Engine.Engine]
-!NetDriverDefinitions=ClearArray
-+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="/Script/OnlineSubsystemUtils.IpNetDriver")
- 
-[OnlineSubsystem]
-DefaultPlatformService=Steam
-PollingIntervalInMs=20
- 
-[OnlineSubsystemSteam]
-bEnabled=true
-SteamDevAppId=480
-GameServerQueryPort=27015
-bRelaunchInSteam=false
-GameVersion=1.0.0.0
-bVACEnabled=1
-bAllowP2PPacketRelay=true
-P2PConnectionTimeout=90
